--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"private": true,
 	"devDependencies": {
 		"@types/aws-lambda": "8.10.149",
-		"@types/bun": "latest"
+		"@types/bun": "latest",
+		"prisma": "^6.8.2"
 	},
 	"peerDependencies": {
 		"typescript": "^5"
@@ -16,6 +17,10 @@
 		"@aws-sdk/client-s3": "^3.817.0",
 		"@aws-sdk/lib-storage": "^3.817.0",
 		"@aws-sdk/s3-request-presigner": "^3.817.0",
-		"sst": "3.16.0"
+		"@prisma/client": "^6.8.2",
+		"reflect-metadata": "^0.2.2",
+		"sst": "3.16.0",
+		"tsyringe": "^4.10.0",
+		"zod": "^3.25.32"
 	}
 }
