--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,13 @@
     // Some stricter flags (disabled by default)
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false
+    "noPropertyAccessFromIndexSignature": false,
+    // tsyringe
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
-  "include": ["services"]
+  "include": [
+    "api",
+    "services"
+  ]
 }
