--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ coverage
 logs
 _.log
 report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
+bun.lock
+bun.lockb
 
 # dotenv environment variable files
 .env
@@ -36,3 +38,5 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 # sst
 .sst
 /generated/*
+
+/generated/prisma
