--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
 	"private": true,
 	"devDependencies": {
 		"@types/aws-lambda": "8.10.149",
-		"@types/bun": "latest",
-		"prisma": "^6.8.2"
+		"@types/bun": "latest"
 	},
 	"peerDependencies": {
 		"typescript": "^5"
@@ -18,6 +17,7 @@
 		"@aws-sdk/lib-storage": "^3.817.0",
 		"@aws-sdk/s3-request-presigner": "^3.817.0",
 		"@prisma/client": "^6.8.2",
+		"prisma": "^6.8.2",
 		"reflect-metadata": "^0.2.2",
 		"sst": "3.16.0",
 		"tsyringe": "^4.10.0",
