--- a/package.json
+++ b/package.json
@@ -9,18 +9,15 @@
 	"peerDependencies": {
 		"typescript": "^5"
 	},
-	"scripts": {
-		"dev": "sst dev"
-	},
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.817.0",
 		"@aws-sdk/lib-storage": "^3.817.0",
 		"@aws-sdk/s3-request-presigner": "^3.817.0",
-		"@prisma/client": "^6.8.2",
-		"prisma": "^6.8.2",
+		"pg": "^8.16.0",
 		"reflect-metadata": "^0.2.2",
 		"sst": "3.16.0",
 		"tsyringe": "^4.10.0",
+		"typeorm": "^0.3.24",
 		"zod": "^3.25.32"
 	}
 }
