--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-	"name": "back-sst",
-	"type": "module",
-	"private": true,
-	"devDependencies": {
-		"@types/aws-lambda": "8.10.149",
-		"@types/bun": "latest"
-	},
-	"peerDependencies": {
-		"typescript": "^5"
-	},
-	"dependencies": {
-		"@aws-sdk/client-s3": "^3.817.0",
-		"@aws-sdk/lib-storage": "^3.817.0",
-		"@aws-sdk/s3-request-presigner": "^3.817.0",
-		"pg": "^8.16.0",
-		"reflect-metadata": "^0.2.2",
-		"sst": "3.16.0",
-		"tsyringe": "^4.10.0",
-		"typeorm": "^0.3.24",
-		"zod": "^3.25.32"
-	}
+  "name": "back-sst",
+  "type": "module",
+  "private": true,
+  "devDependencies": {
+    "@types/aws-lambda": "8.10.149",
+    "@types/bun": "latest",
+    "@types/jsonwebtoken": "9.0.9",
+    "typescript": "5"
+  },
+  "dependencies": {
+    "@aws-sdk/client-s3": "3.817.0",
+    "@aws-sdk/lib-storage": "3.817.0",
+    "@aws-sdk/s3-request-presigner": "3.817.0",
+    "bcryptjs": "3.0.2",
+    "jsonwebtoken": "9.0.2",
+    "pg": "8.16.0",
+    "reflect-metadata": "0.2.2",
+    "sst": "3.16.0",
+    "tsyringe": "4.10.0",
+    "typeorm": "0.3.24",
+    "zod": "3.25.32"
+  }
 }
