--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "3.817.0",
+    "@aws-sdk/client-sesv2": "^3.828.0",
     "@aws-sdk/lib-storage": "3.817.0",
     "@aws-sdk/s3-request-presigner": "3.817.0",
+    "@types/qrcode": "^1.5.5",
     "bcryptjs": "3.0.2",
     "jsonwebtoken": "9.0.2",
+    "otplib": "^12.0.1",
     "pg": "8.16.0",
+    "qrcode": "^1.5.4",
     "reflect-metadata": "0.2.2",
     "sst": "3.16.0",
     "tsyringe": "4.10.0",
