--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typescript": "5"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.840.0",
     "@aws-sdk/client-s3": "3.817.0",
     "@aws-sdk/client-sesv2": "3.828.0",
     "@aws-sdk/lib-storage": "3.817.0",
